# SwigTestProject

./: CMakeLists.txt  _lib.cp311-win_amd64.pyd  lib.cpp  lib.h  lib.i  lib.py  lib_wrap.cxx  main.cpp  pythonLibTest.py  recompilePython.bat  setup.py
